--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,31 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.weather-app {
+  max-width: 600 px;
+  margin: 30px auto;
+  border-radius: 10px;
+  border: 2px blue solid;
+  padding: 20px;
+}
+
 h1 {
   color: red;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 100;
+  margin-bottom: 0;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+  color: blueviolet;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  font-weight: 100;
+  line-height: 19px;
 }
