--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,7 @@ li {
   position: relative;
   font-size: 16px;
   top: -34px;
+  color: #0446a8;
 }
 .float-left {
   float: left;
@@ -57,10 +58,4 @@ li {
 .weather-data-current li {
   color: red;
   text-align: right;
-}
-
-.weather-data-current ul {
-  float: right;
-  margin: -100px -75.5%;
-  width: -1%;
 }
