--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ li {
   padding: 0;
   font-weight: 100;
   line-height: 19px;
+  text-transform: capitalize;
 }
 .weather-app-wrapper {
   max-width: 600px;
