--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,9 @@ li {
   line-height: 19px;
   text-transform: capitalize;
 }
+a {
+  text-decoration: none;
+}
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -44,19 +47,30 @@ li {
   font-size: 64px;
   font-weight: 400;
   line-height: 1;
+  color: rgb(33, 33, 33);
 }
 
 .weather-temperature .units {
   position: relative;
   font-size: 16px;
   top: -34px;
-  color: #0446a8;
+}
+
+.weather-temperature .active {
+  cursor: default;
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
+}
+.weather-temperature .active:hover {
+  text-decoration: none;
+  cursor: default;
 }
 .float-left {
   float: left;
 }
 
 .weather-data-current li {
-  color: red;
+  color: blueviolet;
   text-align: right;
 }
