--- a/src/style.css
+++ b/src/style.css
@@ -83,3 +83,25 @@ a {
   color: navy;
   text-align: right;
 }
+
+.form-control {
+  border: 3px #ec6e4c3d solid;
+}
+
+.weather-forecast {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
