--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,10 @@ li {
 a {
   text-decoration: none;
 }
+button {
+  font-size: 13px;
+  border: none;
+}
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -104,4 +108,8 @@ a {
 
 .weather-forecast-temperatures {
   font-size: 13px;
+}
+
+.wind-speed {
+  text-transform: lowercase;
 }
