--- a/src/style.css
+++ b/src/style.css
@@ -94,7 +94,8 @@ button {
 
 .weather-forecast {
   text-align: center;
-  margin-top: 20px;
+  margin: 20px 0;
+  color: navy;
 }
 
 .weather-forecast-date {
