--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,11 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Poppins;
   background-color: #cdead65e;
-}
-
-h1 {
   color: navy;
+}
+h1 {
   font-size: 24px;
   line-height: 28px;
-  font-weight: 100;
   margin-bottom: 0;
 }
 ul {
@@ -16,11 +14,9 @@ ul {
 }
 li {
   list-style: none;
-  color: navy;
   font-size: 16px;
   margin: 0;
   padding: 0;
-  font-weight: 100;
   line-height: 19px;
   text-transform: capitalize;
 }
@@ -30,6 +26,10 @@ a {
 button {
   font-size: 13px;
   border: none;
+}
+img {
+  width: 50px;
+  margin-top: 10px;
 }
 .weather-app-wrapper {
   max-width: 600px;
@@ -45,6 +45,14 @@ button {
 }
 .overview {
   margin-bottom: 20px;
+  text-align: center;
+  border: 2px navy solid;
+  border-radius: 4px;
+  color: navy;
+}
+.weather-temperature {
+  border: 2px navy solid;
+  border-radius: 4px;
 }
 .weather-temperature img {
   margin-right: 10px;
@@ -55,7 +63,6 @@ button {
   font-size: 64px;
   font-weight: 400;
   line-height: 1;
-  color: navy;
 }
 
 .weather-temperature .units {
@@ -77,12 +84,9 @@ button {
 .float-left {
   float: left;
 }
-
-.weather-data-current li {
-  color: navy;
-  text-align: right;
+.float-right {
+  float: right;
 }
-
 .form-control {
   border: 3px #ec6e4c3d solid;
 }
@@ -90,12 +94,10 @@ button {
 .weather-forecast {
   text-align: center;
   margin: 20px 0;
-  color: navy;
 }
 
 .weather-forecast-date {
   font-size: 16px;
-  opacity: 0.5;
 }
 
 .weather-forecast-temperature-min {
@@ -104,4 +106,29 @@ button {
 
 .weather-forecast-temperatures {
   font-size: 13px;
+}
+.col-2 {
+  margin: 0 4px;
+  border: 2px navy solid;
+  width: 15%;
+  border-radius: 4px;
+}
+.coded-by {
+  text-align: center;
+}
+.last-update {
+  font-size: 12px;
+  text-align: center;
+}
+.weather-data-current {
+  text-align: right;
+  border: 2px navy solid;
+  border-radius: 4px;
+  width: 137px;
+  height: 114px;
+  margin: 0 0 0 120px;
+  padding: 7px 11px 7px 4px;
+}
+.weather-data-current li {
+  line-height: 30px;
 }
